compiler/src/test/resources/amyc/typer/failing/MatchError5.amy
object MatchError
  abstract class Foo
  case class Bar(i: Int) : Foo

  Bar(1) match {
    case Bar(true) => ()
  }
end MatchError
